--- a/pom.xml
+++ b/pom.xml
@@ -154,6 +154,12 @@
             <artifactId>spring-security-taglibs</artifactId>
             <version>5.1.5.RELEASE</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>1.3.2</version>
+        </dependency>
     </dependencies>
 
 
