--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,4 +5,4 @@ db.password = 111111
 email.name=cpudatainform@gmail.com
 email.password=cpudatainform_password
 site.url=http://localhost:8080/web
-storage.path=C:\\Users\\Azat\\Documents\\IdeaProjects\\BookMarket\\files
+storage.path=C:\\files
