--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 db.driverClassName = org.postgresql.Driver
 db.url = jdbc:postgresql://localhost:5432/web
 db.username = postgres
-db.password = Kam
+db.password = 111111
 email.name=cpudatainform@gmail.com
 email.password=cpudatainform_password
 site.url=http://localhost:8080/web
