--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ db.driverClassName=org.postgresql.Driver
 db.url=jdbc:postgresql://localhost:5432/web
 db.username=postgres
 db.password=111111
-email.name=cpudatainform@gmail.com
-email.password=cpudatainform_password
+email.name=totbookstore@gmail.com
+email.password=totramzesbook
 site.url=http://localhost:8080/web
 storage.path=C:\\files
